@@ -1,0 +1,5 @@
+// PR c++/14432
+// { dg-options "" }
+
+struct Y {}; 
+Y y1; 
