@@ -1,3 +1,8 @@
+2004-03-09  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/14432
+	* g++.dg/parse/builtin2.C: New test.
+
 2004-03-08  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/14401
