@@ -1,3 +1,9 @@
+2004-03-09  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/14432
+	* name-lookup.c (supplement_binding): Ignore functions that are
+	marked DECL_ANTICIPATED.
+
 2004-03-08  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/14401
